--- a/src/components/stylesheets/variables.scss
+++ b/src/components/stylesheets/variables.scss
@@ -1,6 +1,7 @@
 $error: #b71c1c;
 $primary: #0288d1;
 $inactive: #b0bec5;
+$divider: #cfd8dc;
 
 // priority
 $priority-low: $primary;
